--- a/WebAPP/Views/About/Index.cshtml
+++ b/WebAPP/Views/About/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using WebAPP.Models.Sınıflar;
+@model List<Hakkimizda>
+@{
     ViewBag.Title = "About";
     Layout = "~/Views/Shared/_TestLayout.cshtml";
 }
@@ -13,18 +15,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html>
 
 <body>
-    
-    
+
+
     <div class="content">
         <div class="wrap">
             <div class="about">
                 <h3>HAKKIMIZDA</h3>
-                <img src="~/web/images/about_banner.jpg" alt="" />
-                <p>Lorem ipsum dolor  </p>
-                </div>
+
+                @foreach (var x in Model)
+                {
+                    <img src="@x.FotoUrl" alt="" />
+                    <p>@x.Aciklama</p>
+                }
+            </div>
         </div>
     </div>
-    
+
 </body>
 </html>
 
