--- a/WebAPP/Views/Blog/BlogDetay.cshtml
+++ b/WebAPP/Views/Blog/BlogDetay.cshtml
@@ -71,7 +71,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
             <div class="col-md-4 side-content">
                 <div class="recent">
-                    <h3>RECENT POSTS</h3>
+                    <h3>Son Bloglar</h3>
                     <ul>
                         <li><a href="#">Aliquam tincidunt mauris</a></li>
                         <li><a href="#">Vestibulum auctor dapibus  lipsum</a></li>
@@ -80,7 +80,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     </ul>
                 </div>
                 <div class="comments">
-                    <h3>RECENT COMMENTS</h3>
+                    <h3>Son Yorumlar</h3>
                     <ul>
                         <li><a href="#">Amada Doe </a> on <a href="#">Hello World!</a></li>
                         <li><a href="#">Peter Doe </a> on <a href="#"> Photography</a></li>
